--- a/parts/intro.tex
+++ b/parts/intro.tex
@@ -2,4 +2,4 @@
 
 
 
-In This section you discuss what the game is and what was expected in the competition. Please do not copy paste from the games documentation on the website, instead write in your own words what you understand from the game/competition.
+Helllo.In This section you discuss what the game is and what was expected in the competition. Please do not copy paste from the games documentation on the website, instead write in your own words what you understand from the game/competition.
