--- a/literature.tex
+++ b/literature.tex
@@ -341,7 +341,7 @@
 \IEEEauthorblockA{9408124635\\ sara16@student.bth.se}
 \and
 \IEEEauthorblockN{Sri Harsha Arakatavemula}
-\IEEEauthorblockA{Null \\ sraa16@student.bth.se}}
+\IEEEauthorblockA{9501036991 \\ sraa16@student.bth.se}}
 
 % conference papers do not typically use \thanks and this command
 % is locked out in conference mode. If really needed, such as for
