--- a/parts/intro.tex
+++ b/parts/intro.tex
@@ -1,5 +1,3 @@
 \section{Introduction}
 
-
-
-Helllo.In This section you discuss what the game is and what was expected in the competition. Please do not copy paste from the games documentation on the website, instead write in your own words what you understand from the game/competition.
+TAC - Trading Agent Competition is a strategy game which has clients, agents and services,it is a 5 day service and includes fight tickets, hotel bookings and entertainment tickets. The motive of the agent is the maximise the profits by buying and selling optimally. 
